--- a/components/SidePanel.module.css
+++ b/components/SidePanel.module.css
@@ -70,7 +70,7 @@
 .dragIndicator {
   position: absolute;
   bottom: 50%;
-  left: var(--bsu-sm);
+  left: var(--sp-3);
   transform: translateY(50%) translateY(calc(-0.5 * var(--button-height)));
 }
 
